--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -484,7 +484,7 @@ On the sensor node, the micro-controller board is programmed to read the data fr
 Next, like other sensors, both gyroscope and accelerometer always have non-zero errors even when leveling and need to be calibrated with a set of offset values before being used. These offset are calculated by another program included in the MPU6050 library and set into appropriate sensor's registers with provided function from the library. See the appendix C for the register map of the MPU6050 sensor. \par
 After initializing the sensors, the sensor node establishes a wireless connection with the local network and host computer. While the host is not connected, the sensor node continuously calls for a connection and the led indicator on the micro-controller board keep brighting until receiving a success connection. Once the connection is established, the sensor node turns off the indicator led for a while and then start blinking while transferring data. All the connection handling functions are included in the \textit{Connection Handling} library written by myself. See the Appendix B.\par 
 
-Finally, the micro-controller starts reading data from two sensors. The output data is used to calculate the normalized acceleration and angular velocity. Whenever the normalized acceleration falls below the $LFT_{Acc}$ threshold, the first flag is set true to indicate the start of a fall event and the program starts a 500ms timer. For the next 500ms, if normalized acceleration and angular velocity exceed the $UFT_{Acc}$ and $UFT_{Gyro}$ respectively, the second and third flags are also set true. When the timer is executed, all flags are checked. If three flags are all true, a fall is detected. The sensor node will send an emergency email to the caregivers while start blinking the super bright red led simultaneously, that help the caregivers find out the patients when they reach the patients' location. If one condition is not true, the system start a new detection loop. All the reading data are also converted into strings, concatenated and sent to the host computer for monitoring. See the Appendix A for the main code on the sensor node. 
+Finally, the micro-controller starts reading data from two sensors. The output data is used to calculate the normalized acceleration and angular velocity. Whenever the normalized acceleration falls below the $LFT_{Acc}$ threshold, the first flag is set true to indicate the start of a fall event and a 500ms timer starts counting. For the next 500ms, if normalized acceleration and angular velocity exceed the $UFT_{Acc}$ and $UFT_{Gyro}$ respectively, the second and third flags are also set true. When the timer is executed, all flags are checked. If three flags are all true, a fall is detected. The sensor node will send an emergency email to the caregivers while start blinking the super bright red led simultaneously, that help the caregivers find out the patients when they reach the patients' location. If one condition is not true, the system start a new detection loop. All the reading data are also converted into strings, concatenated and sent to the host computer for monitoring. See the Appendix A for the main code on the sensor node. 
 \subsection{Data Acquisition Software}
 
 \subsection{Data Analysis Software}
